# jtf-meridian

./: .gitignore  INTEGRATIONS.md  INTEROP.md  README.md  SOURCES.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
data/: command_structure.json
data/doctrine/: 00_multidomain_framework.md  01_decision_frameworks.md  02_division_playbook.md
examples/: help.txt  version.txt
jtf_meridian/: __init__.py  cli.py  connect.py  domains.py  fleet.py  structure.py  thinktank.py
tests/: test_connect.py  test_smoke.py
